1.0.2 tried to fix scrollbar

--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ body {
     overflow-x: hidden;
     width: 100%;
     height: 100vh;
+    z-index: 100;
 }
 .wrapper{
 
@@ -78,7 +79,6 @@ body {
     text-align: center;
     justify-content: space-between;
     background: var(--background);
-    overflow: hidden;
     padding: 25px;
     padding-top: 20px;
     z-index: 2;
@@ -137,7 +137,7 @@ body {
         border-color: var(--text);
         border: 1px;
         transition: 1s;
-        overflow: scroll;
+
     }
 
     .navlinks.responsive .icon {
